Додаємо файл _redirects доt

--- a/weather-user-app/package.json
+++ b/weather-user-app/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && cp _redirects dist/weather-user-app/_redirects",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:weather-user-app": "node dist/weather-user-app/server/server.mjs"
